<resources>
    <string name="app_name" translatable="false">PowerTunnel</string>
    <string name="alt_logo">PowerTunnel Logo</string>
    <string name="app_links" translatable="false"><a href="https://t.me/powertunnel_dpi">Telegram channel</a>\n<a href="https://github.com/krlvm/PowerTunnel">PowerTunnel Desktop</a></string>
    <string name="app_license" translatable="false"><a href="https://github.com/krlvm/PowerTunnel-Android">GitHub Repository</a>\n<a href="https://raw.githubusercontent.com/krlvm/PowerTunnel-Android/master/LICENSE">GNU General Public License v3</a></string>
    <string name="app_description">Powerful and extensible proxy server</string>
    <string name="app_credits" translatable="false"><b><a href="https://github.com/krlvm/PowerTunnel-Android">PowerTunnel for Android</a> is made possible by these open-source projects:</b>\n\n<a href="https://github.com/M66B/NetGuard">NetGuard</a> - VPN server and traffic interceptor\n<a href="https://github.com/adamfisk/LittleProxy">LittleProxy</a> - proxy server, <a href="https://github.com/mrog/LittleProxy">forked version</a>\n<a href="https://github.com/ganskef/LittleProxy-mitm">LittleProxy-MITM</a> - LittleProxy SSL extension\n<a href="https://github.com/dnsjava/dnsjava">dnsjava</a> - DNS and DoH library\n<a href="https://github.com/ibauersachs/dnssecjava">dnssecjava</a> - DNSSec implementation for dnsjava</string>
    <string name="app_version">Version %1$s\nCore v%2$s (%3$d), SDK %4$d</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="learn_more">Learn more</string>
    <string name="download">Download</string>
    <string name="action_starting">Starting…</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <string name="action_stopping">Stopping…</string>
    <string name="action_connecting">Connecting…</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_disconnecting">Disconnecting…</string>
    <string name="settings">Settings</string>
    <string name="view_logs">View logs</string>
    <string name="about">About</string>
    <string name="status_running_proxy">Proxy is running</string>
    <string name="status_running_vpn">VPN is connected</string>
    <string name="status_not_running_proxy">Proxy is not running</string>
    <string name="status_not_running_vpn">VPN is not connected</string>
    <string name="main_description_proxy">Application works in proxy mode, you need to manually configure each app to route the traffic through the proxy server</string>
    <string name="main_description_vpn">Application works in VPN mode, the traffic of all applications goes through PowerTunnel</string>
    <string name="main_description_proxy_loopback"><![CDATA[<b>%1$s</b><small><br><br></small>Local connections:<small><br></small><b>%2$s</b><small><br><br></small>|Local network connections:<small><br></small><b>%3$s</b>]]></string>
    <string name="toast_allow_vpn">Please, allow app to connect to the VPN</string>
    <string name="toast_configure_while_running">Tap again if you want to modify settings, PowerTunnel will be restarted to apply changes</string>
    <string name="toast_configure_while_running_restart">PowerTunnel is restarted for the changes to take effect</string>
    <string name="toast_failed_to_extract_plugins">Failed to install built-in plugins</string>
    <string name="toast_failed_to_install_plugin">Failed to install plugin</string>
    <string name="toast_failed_to_uninstall_plugin">Failed to uninstall plugin</string>
    <string name="toast_plugin_uninstalled">Plugin \"%1$s\" uninstalled</string>
    <string name="toast_plugin_stop_server_to_act">Please, stop the server to do this action</string>
    <string name="qs_starting">Starting PowerTunnel…</string>
    <string name="qs_stopping">Stopping PowerTunnel…</string>
    <string name="qs_startup_failed">Failed to start PowerTunnel</string>
    <string name="dialog_error_failed_to_start_title">Failed to start</string>
    <string name="dialog_error_failed_to_start_message_proxy">An error occurred when starting proxy server: %1$s</string>
    <string name="dialog_error_failed_to_start_message_vpn">An error occurred when starting VPN Interceptor: %1$s</string>
    <string name="dialog_error_failed_to_start_message_vpn_fw">In August 2020 Security Patches Samsung introduced a firmware bug that prevents local VPN Interceptor from start. Visit the repository to learn how to fix it.</string>
    <string name="toast_cert_install">Please, install Root CA to use enabled features</string>
    <string name="toast_cert_install_a11">Please, install saved Root CA to use enabled features</string>
    <string name="toast_cert_install_error">Failed to install Root CA, some features may be unavailable</string>
    <string name="toast_cert_installed">Certificate installed successfully</string>
    <string name="toast_cert_extract_os_unsupported">Certificate extraction is not supported on your Android version</string>
    <string name="toast_cert_extracted">Certificate saved successfully</string>
    <string name="toast_cert_extraction_failed">Failed to save certificate</string>
    <string name="dialog_cert_extract_title">Certificate installer</string>
    <string name="dialog_cert_extract_message">Do you want to save certificate for installing it manually?</string>
    <string name="notification_group_connection">Connection</string>
    <string name="notification_group_connection_description">Connection status</string>
    <string name="notification_channel_proxy">Proxy Server</string>
    <string name="notification_channel_proxy_description">Proxy Server status</string>
    <string name="notification_channel_vpn">VPN</string>
    <string name="notification_channel_vpn_description">VPN Connection status</string>
    <string name="notification_title_proxy">PowerTunnel Proxy</string>
    <string name="notification_message_proxy">Proxy Server is running</string>
    <string name="notification_title_vpn">PowerTunnel VPN</string>
    <string name="notification_message_vpn">VPN is connected</string>
    <string name="title_activity_plugins">Plugins</string>
    <string name="alt_plugin_settings">Settings</string>
    <string name="alt_plugin_uninstall">Uninstall</string>
    <string name="alt_plugin_about">About</string>
    <string name="visit_homepage">Homepage</string>
    <string name="action_plugin_install">Install a plugin</string>
    <string name="action_plugin_registry">Plugin Registry</string>
    <string name="toast_plugin_not_configurable">Plugin is not configurable</string>
    <string name="toast_plugin_installed">Plugin installed successfully, uninstall old version if present</string>
    <string name="dialog_plugin_uninstall_title">Confirmation</string>
    <string name="dialog_plugin_uninstall_message">Are you sure you want to uninstall the plugin?</string>
    <string name="menu_plugin_additional_configuration_title">Additional configuration</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_category_application">Application</string>
    <string name="settings_pref_theme">Theme</string>
    <string name="settings_pref_autostart">Autostart</string>
    <string name="settings_pref_autostart_description">App will be automatically started after reboot if it was running before</string>
    <string name="settings_category_connection">Connection</string>
    <string name="settings_pref_mode">Connection mode</string>
    <string name="settings_pref_proxy_ip">Local proxy server IP address</string>
    <string name="settings_pref_proxy_port">Local proxy server port</string>
    <string name="settings_pref_upstream_proxy">Connect via upstream proxy</string>
    <string name="settings_pref_upstream_proxy_description">Use upstream proxy to connect to the Internet</string>
    <string name="settings_pref_upstream_proxy_ip">Upstream proxy IP address</string>
    <string name="settings_pref_upstream_proxy_port">Upstream proxy port</string>
    <string name="settings_pref_upstream_proxy_protocol">Upstream proxy protocol</string>
    <string name="settings_pref_upstream_proxy_auth">Upstream proxy authorization</string>
    <string name="settings_pref_upstream_proxy_auth_description">Authenticate on upstream proxy server</string>
    <string name="settings_pref_upstream_proxy_auth_username">Upstream proxy username</string>
    <string name="settings_pref_upstream_proxy_auth_password">Upstream proxy password</string>
    <string name="settings_category_vpn">VPN</string>
    <string name="settings_pref_vpn_resolve_hosts">Resolve domain names</string>
    <string name="settings_pref_vpn_resolve_hosts_description">Increases performance but reduces functionality</string>
    <string name="settings_pref_vpn_apps_mode">Apps filtration mode</string>
    <string name="settings_pref_vpn_apps_excluded">Excluded apps</string>
    <string name="settings_pref_vpn_apps_excluded_description">List of apps that bypass VPN</string>
    <string name="settings_pref_vpn_apps_allowed">Allowed apps</string>
    <string name="settings_pref_vpn_apps_allowed_description">List of apps that allowed to use VPN</string>
    <string name="settings_category_proxy">Proxy</string>
    <string name="settings_pref_proxy_auth_enabled">Require proxy authorization</string>
    <string name="settings_pref_proxy_auth_enabled_description">Require authorization on local proxy</string>
    <string name="settings_pref_proxy_auth_username">Authorization username</string>
    <string name="settings_pref_proxy_auth_password">Authorization password</string>
    <string name="settings_pref_transparent_mode">Transparent mode</string>
    <string name="settings_pref_strict_dns">Strict DNS Mode</string>
    <string name="settings_pref_allow_requests_to_origin_server">Allow requests to origin server</string>
    <string name="settings_pref_cert_refuse">Don\'t propose certificate installation</string>
    <string name="settings_category_data_storage">Data storage</string>
    <string name="settings_pref_collect_logs">Collect logs</string>
    <string name="settings_pref_collect_logs_description">Adds Log Viewer to three-dot menu</string>
    <string name="settings_pref_external_configs">Store configurations in Documents</string>
    <string name="settings_pref_external_configs_off">Configurations are stored in the secured app storage</string>
    <string name="settings_pref_external_configs_on">Configurations are stored in Documents folder</string>
    <string name="dialog_external_configs_title">Confirmation</string>
    <string name="dialog_external_configs_message">Plugins configuration will be reset after moving it to Documents folder, continue?</string>
    <string name="app_list_search">Search</string>
    <string name="app_list_show_checked">Show checked apps</string>
    <string name="app_list_refresh">Refresh</string>
    <string name="plugin_settings_failed_to_create">Failed to create configuration</string>
    <string name="plugin_settings_failed_to_read">Failed to read configuration</string>
    <string name="plugin_settings_failed_to_save">Failed to save configuration</string>
    <string name="action_plugin_settings_reset">Reset configuration</string>
    <string name="toast_permission_for_external_configs">Please, grant the permission to save configurations to Documents folder</string>
    <string name="plugins_activity_tip">Hold the gear icon to view additional configuration files</string>
    <string name="plugins_activity_toast_back">Tap again to quit without saving</string>
    <string name="title_activity_logs">Log Viewer</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_save">Save</string>
    <string name="check_for_updates">Check for updates</string>
</resources>