<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of PowerTunnel-Android.
  ~
  ~ PowerTunnel-Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ PowerTunnel-Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with PowerTunnel-Android.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/action_plugins"
        android:orderInCategory="1"
        android:title="@string/title_activity_plugins"
        android:icon="@drawable/ic_plugins"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logs"
        android:orderInCategory="3"
        android:title="@string/view_logs"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="4"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>